--- a/index.html
+++ b/index.html
@@ -1,20 +1,37 @@
-<html>
-<title>
-	CNgeek...
-</title>
+</DOCTYPE html>
+	<html lang="zh-CN">
 
-<audio src="test.mp3" controls="controls" loop="loop" autoplay="autoplay">
-</audio>
+	<head>
+		<meta charset="utf-8">
 
-<h3>
-	何贞攀
-	靳洪波
-	王景阳
-	李新新
+		<title>
+			帝国极客
+		</title>
 
-	永远的兄弟。。。
+		<meta name="keywords" content="帝国极客极光开源"/>
+		<meta name="decription" content="推进开源事业..."/>
+	</head>
 
-	Hello World!
-</h3>
+	<body>
+		<audio src="test.mp3" controls="controls" loop="loop" autoplay="autoplay">
+		</audio>
+		
+		<p>
+			Hello World!
+		</p>
+	</body>
+	
+	<script>
+		
+	</script>
+
 
 </html>
+
+
+
+
+
+
+
+
