--- a/index.html
+++ b/index.html
@@ -5,21 +5,26 @@
 		<meta charset="utf-8">
 
 		<title>
-			帝国极客
+			帝国极客 | 极光开源
 		</title>
 
 		<meta name="keywords" content="帝国极客极光开源"/>
 		<meta name="decription" content="推进开源事业..."/>
 	</head>
 
-	<body>
-		<audio src="test.mp3" controls="controls" loop="loop" autoplay="autoplay">
+	<body bgcolor=#EBEBEB> 
+		<div style="background:url('title.png')no-repeat;height:100px">
+			<font size="6" color="white">
+				<center>
+					Aurora&nbsp;&nbsp;&nbsp;Opensource
+				<center>
+			</font>
+		</div>
+		<audio src="test.mp3" controls="controls" loop="loop" preload="none">
 		</audio>
-		
-		<p>
-			哈哈哈。。。欢迎。。。欢迎。。。
-			Hello World!
-		</p>
+		<font size="4" color="blue">
+			页面测试。。。
+		</font>
 	</body>
 	
 	<script>
