--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 		<meta name="keywords" content="帝国极客极光开源"/>
 		<meta name="decription" content="推进开源事业..."/>
+		<meta name="viewport" content="width=device-width,initial-scale=1.0,maximux-scale=1.0,user-scalabe=0"/>
 	</head>
 
 	<body bgcolor=#EBEBEB> 
