--- a/index.html
+++ b/index.html
@@ -11,21 +11,26 @@
 		<meta name="keywords" content="帝国极客极光开源"/>
 		<meta name="decription" content="推进开源事业..."/>
 		<meta name="viewport" content="width=device-width,initial-scale=1.0,maximux-scale=1.0,user-scalabe=0"/>			
+		<style>
+			body{background-color:#EBEBEB}
+			.sit_map_div{height:100px;font-size:"6";color:#FFFFFF;background-color:#000000}
+			.fix-top{position:fixed;top:0px;left:0px;right:0px}
+		</style>
 	</head>
 
-	<body bgcolor=#EBEBEB> 
-		<div style="background:url('title.png')no-repeat;height:100px">
-			<font size="6" color="white">
+	<body>
+		<div class="sit_map_div fix-top"> 
 				<center>
 					Aurora&nbsp;&nbsp;&nbsp;Opensource
 				<center>
+		</div>
+		<div style="position:fixed;top:100px;left:0px;right:0px">
+			<audio src="test.mp3" controls="controls" loop="loop" preload="none">
+			</audio>
+			<font size="4" color="blue">
+				页面测试。。。
 			</font>
 		</div>
-		<audio src="test.mp3" controls="controls" loop="loop" preload="none">
-		</audio>
-		<font size="4" color="blue">
-			页面测试。。。
-		</font>
 	</body>
 	
 	<script>
