--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1.0,maximux-scale=1.0,user-scalabe=0"/>			
 		<style>
 			body{background-color:#EBEBEB}
-			.sit_map_div{height:100px;font-size:"6";color:#FFFFFF;background-color:#000000}
+			.sit_map_div{height:100px;font-size:24px;color:#FFFFFF;background-color:#000000}
 			.fix-top{position:fixed;top:0px;left:0px;right:0px}
 		</style>
 	</head>
 
 	<body>
-		<div class="sit_map_div fix-top"> 
+		<div class="sit_map_div fix-top">
 				<center>
 					Aurora&nbsp;&nbsp;&nbsp;Opensource
 				<center>
