--- a/index.html
+++ b/index.html
@@ -13,18 +13,17 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1.0,maximux-scale=1.0,user-scalabe=0"/>			
 		<style>
 			body{background-color:#EBEBEB}
-			.sit_map_div{height:100px;font-size:24px;color:#FFFFFF;background-color:#000000}
+			.sit_map_div{height:100px;font-size:32px;color:#CD00CD;background-color:#000000}
 			.fix-top{position:fixed;top:0px;left:0px;right:0px}
 		</style>
 	</head>
 
 	<body>
 		<div class="sit_map_div fix-top">
-				<center>
-					Aurora&nbsp;&nbsp;&nbsp;Opensource
-				<center>
+			<center>Aurora&nbsp;&nbsp;Opensource</center>
 		</div>
 		<div style="position:fixed;top:100px;left:0px;right:0px">
+			<img src="ceshi.png" alt="aurora"></img>
 			<audio src="test.mp3" controls="controls" loop="loop" preload="none">
 			</audio>
 			<font size="4" color="blue">
