--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			<center>Aurora&nbsp;&nbsp;Opensource</center>
 		</div>
 		<div style="position:fixed;top:100px;left:0px;right:0px">
-			<img src="ceshi.png" alt="aurora"></img>
+			<center><img src="ceshi.png" alt="aurora"></img></center>
 			<audio src="test.mp3" controls="controls" loop="loop" preload="none">
 			</audio>
 			<font size="4" color="blue">
